update: updated README.md

--- a/mark7/index.html
+++ b/mark7/index.html
@@ -15,7 +15,7 @@
     <nav>
       <h1>Minion Translator</h1>
       <ul class="navbar-ul">
-        <li class="navbar-item"><a class="navbar-link active" href="/">Github link</a></li>
+        <li class="navbar-item"><a class="navbar-link active" href="https://github.com/shanolhere">Github link</a></li>
       </ul>
     </nav>
     <main>
