update: added social links

--- a/mark10/index.html
+++ b/mark10/index.html
@@ -15,7 +15,7 @@
     <nav>
       <h1>Cash Register Manager</h1>
       <ul class="navbar-ul">
-        <li class="navbar-item"><a class="navbar-link active" href="https://github.com/shanolhere">Github link</a></li>
+        <li class="navbar-item"><a class="navbar-link active" href="https://github.com/shanolhere" target="_blank">Github link</a></li>
       </ul>
     </nav>
     <main>
@@ -68,11 +68,11 @@
       <h2>Connect with me</h2>
       <p>Connecting with people is what I like the most.</p>
       <ul class="social-links">
-        <li class="social-linkItem"><a href="https://twitter.com/nerd_fswd"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li class="social-linkItem"><a href="https://instagram.com/sabiya.ig"><ion-icon name="logo-instagram"></ion-icon></a></li>
-        <li class="social-linkItem"><a href="https://www.linkedin.com/in/sabiya-tabassum-95ba87244/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-        <li class="social-linkItem"><a href="mailto: sabiyatabassum99@gmail.com"><ion-icon name="mail-outline"></ion-icon></a></li>
-        <li class="social-linkItem"><a href="https://github.com/shanolhere"><ion-icon name="logo-github"></ion-icon></a></li>
+        <li class="social-linkItem"><a href="https://twitter.com/nerd_fswd" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        <li class="social-linkItem"><a href="https://instagram.com/sabiya.ig" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+        <li class="social-linkItem"><a href="https://www.linkedin.com/in/sabiya-tabassum-95ba87244/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        <li class="social-linkItem"><a href="mailto: sabiyatabassum99@gmail.com" target="_blank"><ion-icon name="mail-outline"></ion-icon></a></li>
+        <li class="social-linkItem"><a href="https://github.com/shanolhere" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
       </ul>
     </footer>
     <script src="index.js"></script>
