--- a/mark12/pages/checkHypo.html
+++ b/mark12/pages/checkHypo.html
@@ -29,7 +29,7 @@
 
         <button class="check">Calculate</button>
 
-        <h4>Hypotenuse will be calculated:<p class="message"></p></h4>
+        <h4>Hypotenuse will be calculated:<p class="message">√(A² + B²)</p></h4>
 
       </div>
     </main>
